src/objects/sked_Support_Delivered__c.object
<CustomObject>
    <fields>
        <fullName>sked_Group_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Attendee</label>
        <referenceTo>Group_Attendee__c</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Allocation</label>
        <referenceTo>sked__Job_Allocation__c</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job_Description__c</fullName>
        <formula>sked_Job__r.sked__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Job_Type__c</fullName>
        <formula>TEXT(sked_Job__r.sked__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Resource_Name__c</fullName>
        <formula>sked_Job_Allocation__r.sked__Resource__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Support_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Note</label>
        <referenceTo>sked_Support_Note__c</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Support Delivered</relationshipLabel>
        <relationshipName>sked_Support_Delivered</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Support Delivered</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Delivered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>